# timex

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml
.github/: deploy-action.yaml
.github/workflows/: codeql.yml  deploy-action.yaml  gh.page.yaml
asm/: .gitignore  Cargo.toml
asm/src/: lib.rs
asm2/: .gitignore  Cargo.toml
asm2/src/: lib.rs
core/: .gitignore  Cargo.toml  Makefile
core/src/: days.rs  extract.rs  lib.rs  model.rs  months.rs  utils.rs  weeks.rs
core/src/utils/: diff.rs  mod.rs
core/tests/: common.rs  day_test.rs  day_test_for_panic_cases.rs  month_test.rs  month_test_for_panic_cases.rs  week_test.rs
coverage/: tarpaulin-report.html
server/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  main.go
server/internal/: dto.go  get.go  root.go
server/proto/api/v1/: glue.pb.go  glue.proto  glue_grpc.pb.go
server/src/: main.rs
server/web/: .prettierignore  README.md  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
server/web/public/pkg/: README.md  package.json  timex.d.ts  timex.js  timex_bg.wasm  timex_bg.wasm.d.ts
server/web/src/app/: layout.tsx  page.tsx
server/web/src/asm/: asm-9dbf0d2.d.ts  asm-9dbf0d2.js  asm-9dbf0d2_bg.wasm  asm-9dbf0d2_bg.wasm.d.ts  index.d.ts  index.js  package.json  version.ts
server/web/src/components/: date.tsx  index.ts
server/web/src/components/date/: calendar.tsx  custom.tsx  date.tsx  index.ts  types.ts
server/web/src/components/highlight/: index.tsx  style.css
server/web/src/components/page/: home.tsx
server/web/src/components/ui/: accordion.tsx  alert.tsx  button.tsx  calendar.tsx  card.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  resizable.tsx  select.tsx  tabs.tsx  toast.tsx  toaster.tsx  use-toast.ts
server/web/src/types/: index.ts
src/: days.rs  errors.rs  extract.rs  lib.rs  model.rs  months.rs  preprocessor.rs  utils.rs  weeks.rs
src/utils/: diff.rs  mod.rs
tests/: common.rs  day_test.rs  month_test.rs  week_test.rs
