[package]
name = "timex"
version = "0.1.2-beta.1"
edition = "2021"
resolver = "2"
authors = ["Jawahar S <jawahar273@gmail.com>"]
license = "MIT"
description = "Generate date times as event similar to Microsoft calender or Google calender based on the given parameters."
readme = "README.md"
homepage = "https://github.com/jawahar273/timex"
repository = "https://github.com/jawahar273/timex"
categories = ["date-and-time"]
keywords = ["calendar", "date", "time"]
rust-version = "1.73"
exclude = ["server", "coverage"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"

# reduce web assembly size https://rustwasm.github.io/twiggy/
[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
 
[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
    
[profile.test]  
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind' 
incremental = true
codegen-units = 256
rpath = false

# [profile.bench]            
# opt-level = 3
# debug = true
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'    
# incremental = false
# codegen-units = 16
# rpath = false                       

# [dev-dependencies]
# cargo-tarpaulin = "0.27.2"

