[package]
name = "asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = "0.4.31"
wasm-bindgen = "0.2.90"
timex = { path = "../"}
serde-wasm-bindgen = "0.6.3"