workspace = { members = ["wasi-hello-world"] }
[package]
name = "asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.0.1"
timex = { path = "../"}
chrono = "0.4.31"
serde = "1.0"
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.3"

[lib]
crate-type = ["rlib", "cdylib"]

[build]
target = "wasm32-wasi"
