[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
axum = "0.7.2"
tokio =  { version = "1.35.1", features = ["full"] } 
tower = "0.4.13"
timex = { path = "../core"}
chrono = "0.4.31"
serde_json = "1.0.108"
serde = "1.0.193"
tonic = "0.10.2"
prost = "0.12.3"
tonic-health = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
